--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -1,27 +1,33 @@
 ---
-title: "Post With Code"
+title: "Blog 1"
 author: "Lala Sefale"
 date: "2026-01-28"
 categories: [news, code, analysis]
 image: "image.jpg"
 ---
 
-## The Languages of Africa
+# The Languages of Africa
 
-# Introduction
+## Introduction
 
-This blog post explores the distribution of various languages spoken across the continent of Africa. The data was sources from the tidytuesday Github repository, curated by Muwanga Robert: https://github.com/rfordatascience/tidytuesday/blob/main/data/2026/2026-01-13/readme.md.
+This blog post explores the distribution of various languages spoken across the continent of Africa. The data was sourced from the tidytuesday Github repository, curated by Muwanga Robert: https://github.com/rfordatascience/tidytuesday/blob/main/data/2026/2026-01-13/readme.md.
 
-The dataset consists of a variable for language which contains the name of an African language, a variable for family which contains a classification of that language according to ancestry, phonetics and grammar, a variable for native speakers which contains the total number of known speakers of that language across the continent, and finally a variable for country which contains the country where the specific language is spoken.
+The data set consists of a variable for language which contains the name of an African language, a variable for family which contains a classification of that language according to ancestry, phonetics and grammar, a variable for native speakers which contains the total number of known native speakers of that language across the continent, and finally a variable for country which contains the name of the country where the language is spoken.
 
 The question of interest for this exploration is: what is the language that has the most native speakers in Africa, and which region of Africa is it most spoken in?
 
-To answer this question, a lollipop plot will be made to visualize the top 10 languages spoken by the most native speakers, and the distribution of the one with the highest number of speakers will be visualized on a map.
+To answer this question, a lollipop plot will be made to visualize the top 10 languages with the most native speakers, and the distribution of the one with the highest number of native speakers will be visualized on a map.
 
-# Primary Visualizations
+## Primary Visualizations
 
 ```{r}
 #| echo: FALSE
+#| warning: false
+
+## install.packages("sf")
+library(sf)
+library(here)
+library(tidyverse)
 # Using R
 # Option 1: tidytuesdayR R package 
 ## install.packages("tidytuesdayR")
@@ -29,13 +35,12 @@ To answer this question, a lollipop plot will be made to visualize the top 10 la
 # Reading data directly from GitHub
 
 africa <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2026/2026-01-13/africa.csv')
-
-africa
-
 ```
 
-# lollipop plot of top 10most spoken languages (spoken )
+## Bar plot to visualize the top 10 languages with the most native speakers 
+
 ```{r}
+#| echo: FALSE
 # top 10 languages spoken in the most number of countries
 most_spoken10 <- africa |> group_by(language) |>
   slice(1) |> #because even though a language may appear many times, it appears with the same number of speakers because that is the total across the continent
@@ -44,21 +49,9 @@ most_spoken10 <- africa |> group_by(language) |>
   slice(1:10) |>
   mutate(language = fct_reorder(language, native_speakers))
 
-# lollipop plot to visualize the top 10 languages spoken in most countries in Africa
 
 ggplot(data = most_spoken10, aes(x = language, y = native_speakers)) +
-  geom_point(colour = "darkgreen") +
-  geom_segment(aes(xend = language, y = 0, yend = native_speakers), colour = "darkgreen") +
-  coord_flip() +
-  theme_minimal() +
-  labs(title = "Top 10 languages with the most native speakers in Africa",
-       x = "Language",
-       y = "Number of native speakers")
-
-# Bar plot to visualize the top 10 languages with the most native speakers 
-
-ggplot(data = most_spoken10, aes(x = language, y = native_speakers)) +
-  geom_col(fill = "darkgreen") +
+  geom_col(fill = "purple") +
   coord_flip() +
   theme_minimal() +
   labs(title = "Top 10 languages with the most native speakers in Africa",
@@ -68,32 +61,25 @@ ggplot(data = most_spoken10, aes(x = language, y = native_speakers)) +
 ```
 
 
-The bar plot above shows Arabic to be the language with the most native speakers on the African continent by almost 3 times the number of native speakers of Hausa, which is the language that follows it in ranking by native speakers.
+This bar plot shows Arabic to be the language with the most native speakers on the African continent by almost 3 times the number of native speakers of Hausa, which is the language that follows it in ranking by native speakers.
 
--- surprising finding -- expected Swahili to be one of the top 2 with most native speakers -- not so because although it is very widely spoken, a lot of its speakers speak it as a second or third language, not native speakers
+This is a surprising finding for me because I had expected Swahili to be one of the top 2 African languages with most native speakers. It is not so because although it is very widely spoken, a lot of its speakers speak it as a second or third language; they are not native speakers.
+
+
+Here is a map to visualize the distribution of Arabic across the African continent.
+
+## Map showing the distribution of Arabic-speaking countries across the African continent
 
 ```{r}
-
-
-```
-
-
-```{r}
-# map to show the distribution of Arabic-speaking countries across the African continent
-
-## install.packages("sf")
-library(sf)
-library(here)
-library(tidyverse)
+#| echo: FALSE
+#| warning: false
+#| message: FALSE
 
 # Read shapefile
 world <- st_read(here("countries", "ne_10m_admin_0_countries.shp"))
 
 # Filter for Africa
 africa_mapfile <- world |> filter(CONTINENT == "Africa")
-
-glimpse(africa)
-
 
 #joining the 2 data sets
 
@@ -102,11 +88,7 @@ glimpse(africa)
 # making them the same column for easy joining
 africa_mapfile <- africa_mapfile |> rename(country = NAME_EN)
 
-glimpse(africa_mapfile)
-
-
-
-# filter countries with arabic as language, store in data frame,mutate variable for spoken language arabic, join that data frame to the main one by country -- use data set main with no language -- countries with no arabic should contain NA - then mutate the languages with NA to be "other" while the arabic ones are arabic
+# filtering countries with arabic as language, storing them in data frame,mutating variable for spoken language arabic, joining that data frame to the main one by country -- using data set main with no language -- countries with no arabic should contain NA - then mutating the languages with NA to be "other" while the arabic ones are arabic
 
 arabic <- africa |> filter(language == "Arabic") |>
   mutate(spoken_language = language)
@@ -125,73 +107,17 @@ ggplot(data = joined_arabic) +
 
 ```
 
-From the map above, it can be seen that countries that have Arabic as one of their spoken languages are mostly in Northern Africa, except for Tanzania, Somalia and Djibouti which are all in East Africa. 
+From the map, it can be seen that countries that have native Arabic speakers are mostly in Northern Africa, except for Tanzania, Somalia and Djibouti which are in East Africa. This is likely the result of the 7th-8th century Arab-Islamic Expansion where Arab Muslim armies expanded out of the Arabian Peninsula into mostly Northern Africa and parts of East Africa.
 
-# Conclusion and Wrap-Up
+## Conclusion and Wrap-Up
 
-flaws:
-- There is a flaw in my approach to visualizing the distribution of countries that have native speakers of Arabic. From first glance, and without prior understanding of the context of the visualization, a viewer might perceive the map as though it means the countries coloured purple only have Arabic as the spoken language, whereas it is just one of the languages spoken in those countries. What this visualization was meant to do is to show which countries have Arabic as a spoken language
+The flaw in my approach to visualizing the distribution of countries that have native speakers of Arabic is that from first glance, and without prior understanding of the context of the visualization, a viewer might perceive the map as though it means the countries colored purple have Arabic as the only spoken language, whereas it is just one of the languages spoken in those countries. What this visualization was meant to do is to show which countries have native Arabic speakers.
 
 If I had additional data on the number of native speakers for each language in every country it is spoken in, I would change the map to have a sequential color scheme to visualize the distribution of Arabic speakers across the continent according to their numbers.
 
 
 # Connection to Class Ideas
 
+A bar plot is an effective visualization for the top 10 languages with the most native speakers because it allows the reader to compare the number of native speakers that each of the 10 languages has. It is particularly effective because the scale of native speakers starts at 0 as we discussed in class that scales for bar plots and lollipop plots must start at zero to make differences more easily comparable.
 
-?????
-
-
-
-
-
-
-
-
-
-
-
-
-```{r}
-
-
-# seeing that Tsonga is among th etop 10 by country, I am curious which other countries speak it because i only know of it being spoken in South Africa, and by not a very huge population there:
-
-#map showing countries that speak Xitsonga/Tsonga
-
-
-
-# PROBLEM HERE: NATIVE_SPEAKERS IS THE TOTAL NUMBER OF KNOWN NATIVE SPEAKERS, EACH LANGUAGE HAS THE SAME ONE NUMBER IN THIS COLUMN EVERYTIME IT APPEARS
-# FIXXXXX
-
-#top 10 languages spoken by the highest number of native speakers
-most_speakers <- africa |> group_by(language) |>
-  summarise(sum_speakers = sum(native_speakers)) |>
-  arrange(desc(sum_speakers)) |>
-  slice(1:10) |>
-  
-
-# a map to visualize the geographic location of the countries where Soninke is spoken to see its distribution across the continent
-
-
-# a map to visualize the geographic location of the countries where Arabic is spoken to see if there is a trend
-
-
-africa |> filter(language == "Sesotho")
-
-
-# map showing the distribution of family of languages -- analysis includes why afroasiatic is on the east side...
-```
-
-
-
-
-
-
-ideas:
-- find the most spoken language - then visualize to see which countries speak it
-
-- visualization for which countries speak swahili
-
-- seeing which countries speak sesotho...
-
-- some visualization to see language distributions by SUBREGION
+A map is also an effective visualization for the second part of the question of interest because I was interested in seeing the geographic distribution of countries with native Arabic speakers across the continent, and the map provided that clearly.
