--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,16 @@
 ---
-title: "About"
+title: "Blog Posts For Data Visualization Class"
 image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
       href: https://linkedin.com
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/M-Sefale/M-Sefale/blob/main/README.md
 ---
 
-About this blog
+This blog contains Data Visualization projects for the DATA 334 course. 
+
